[gd_scene load_steps=5 format=1]

[ext_resource path="res://Leopard/HUD/HUD_Root.gd" type="Script" id=1]
[ext_resource path="res://Leopard/HUD/orange-square-md.png" type="Texture" id=2]
[ext_resource path="res://Leopard/LeopMain/SanFranciscoDisplay-Regular.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Leopard/Obstacles/laserRed03.png" type="Texture" id=4]

[node name="HUD_Root" type="Node"]

script/script = ExtResource( 1 )

[node name="Health_Score_Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 336.097, 200.216 )
transform/scale = Vector2( 1.35457, 0.714073 )
texture = ExtResource( 2 )

[node name="Label_Score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 152.0
margin/top = 228.0
margin/right = 335.0
margin/bottom = 282.0
custom_fonts/font = ExtResource( 3 )
text = "SCORE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Health" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 151.0
margin/top = 111.0
margin/right = 365.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
text = "HEALTH"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 243, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 4 )

[node name="Sprite1" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 273, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 303, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 333, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 4 )

[node name="Menu_Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 949.901, 509.368 )
transform/scale = Vector2( 1.6934, 0.893788 )
texture = ExtResource( 2 )

[node name="Label_Menu" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 648.0
margin/top = 419.0
margin/right = 1252.0
margin/bottom = 701.0
custom_fonts/font = ExtResource( 3 )
text = "Leopard

Press Enter to Play

"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Game_Over_Sprite" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 951.253, 512.938 )
transform/scale = Vector2( 1.61787, 2.50626 )
texture = ExtResource( 2 )

[node name="Label_Game_Over" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 679.0
margin/top = 195.0
margin/right = 1224.0
margin/bottom = 883.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over

You have a 

High Score!

000000

Press Enter
 
To Play Again
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


